tests/ui/function_call_on_non_fn.stderr
error: expected an expression
 --> tests/ui/function_call_on_non_fn.rs:6:17
  |
6 | #[function_call(;)]
  |                 ^
